--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // ---------------------------------------/
 
-$container-width: 980px !default;
+$container-width: 1600px !default;
 $grid-gutter:     10px !default;
 
 // Colors
@@ -12,7 +12,7 @@ $black:             #333;
 $text_color:        $black;
 
 // Font stack
-$body-font: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$body-font: Arial, freesans, Helvetica nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 // The base body size
 $body-font-size: 13px !default;
