--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -222,8 +222,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">Made by <a href="http://twitter.com/asealey">@asealey</a>. Based on <a href="https://github.com/jglovier/resume-template">resume-template</a> by <a href="http://twitter.com/jglovier">@jglovier</a>.</p>
       </footer>
 
     </div>
