customize some styling & fonts

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -12,10 +12,10 @@
       <header class="page-header">
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
-        {% if site.resume_avatar == 'true' %}
+        {% if site.resume_avatar %}
         <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
-
+        {{ page.pdf_url }}
         <!-- Your name is defined in the _config.yml file -->
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
@@ -34,7 +34,7 @@
         </div>
 
         <div class="executive-summary no-print" itemprop="description">
-          {{ site.resume_header_intro }}
+          <p> {{ site.resume_header_intro }} </p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -45,6 +45,31 @@
         {% endif %}
 
       </header>
+
+      {% if site.resume_section_education %}
+      <!-- begin Education -->
+      <section class="content-section">
+        <header class="section-header">
+          <h2>Education</h2>
+        </header>
+
+        {% for education in site.data.education %}
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name">{{ education.degree }} &bull; {{ education.year }}</h3>
+          <h4 class="resume-item-details group" itemprop="description">{{ education.uni }}</h4>
+          <p class="resume-item-copy">{{ education.summary }}</p>
+          {% if education.list %}
+          <ul class="resume-item-list">
+          {% for item in education.list %}
+            <li>{{ item }}</li>
+          {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+        {% endfor %}
+      </section>
+      <!-- end Education -->
+      {% endif %}
 
       {% if site.resume_section_experience %}
       <!-- begin Experience -->
@@ -59,33 +84,19 @@
           <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
           <p class="resume-item-copy">{{ job.summary }}</p>
+          {% if job.list %}
+          <ul class="resume-item-list">
+          {% for item in job.list %}
+            <li>{{ item }}</li>
+          {% endfor %}
+          </ul>
+          {% endif %}
         </div><!-- end of resume-item -->
         {% endfor %}
 
       </section>
       <!-- end Experience -->
       {% endif %}
-
-
-      {% if site.resume_section_education %}
-      <!-- begin Education -->
-      <section class="content-section">
-        <header class="section-header">
-          <h2>Education</h2>
-        </header>
-
-        {% for education in site.data.education %}
-        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
-          <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
-          <h5 class="resume-item-details award-title" itemprop="description">{{ education.awards }}</h5>
-          <p class="resume-item-copy">{{ education.summary }}</p>
-        </div>
-        {% endfor %}
-      </section>
-      <!-- end Education -->
-      {% endif %}
-
 
       {% if site.resume_section_projects %}
       <!-- begin Projects -->
