Remove footer from print-view

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -230,7 +230,7 @@
       <!-- end Print Social Links -->
       {% endif %}
 
-      <footer class="page-footer">
+      <footer class="page-footer no-print">
         <p class="footer-line">Made by <a href="http://twitter.com/asealey">@asealey</a>. Based on <a href="https://github.com/jglovier/resume-template">resume-template</a> by <a href="http://twitter.com/jglovier">@jglovier</a>.</p>
       </footer>
 
