Add support for experience lists

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -59,6 +59,11 @@
           <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
           <p class="resume-item-copy">{{ job.summary }}</p>
+          <ul class="resume-item-list">
+            {% for accomplishment in job.accomplishments %}
+            <li>{{ accomplishment.item }}</li>
+            {% endfor %}
+          </ul>
         </div><!-- end of resume-item -->
         {% endfor %}
 
