changed footer in layout
- removed original references

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -232,8 +232,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+	      <p class="footer-line">Made with %lt3 by <a href="http://github.com/50L1DU5">Ian Shannon Cohee</a>.</p>
       </footer>
 
     </div>
