--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -13,7 +13,7 @@
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+        <img src="images/avatar.png" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
@@ -232,7 +232,7 @@
       {% endif %}
 
       <footer class="page-footer">
-	      <p class="footer-line">Made with %lt3 by <a href="http://github.com/50L1DU5">Ian Shannon Cohee</a>.</p>
+	      <p class="footer-line">Made with <strong style="color:red;">&lt3</strong> by <a href="http://github.com/50L1DU5">Ian Shannon Cohee</a>.</p>
       </footer>
 
     </div>
