--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -42,7 +42,7 @@
         {% if site.resume_looking_for_work == 'yes' %}
         <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
         {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
+	<a class="contact-button not-looking no-print">Not currently looking for work</a>
         {% else %}
         {% endif %}
 
@@ -232,7 +232,7 @@
       {% endif %}
 
       <footer class="page-footer">
-	      <p class="footer-line">Made with <strong style="color:red;">&lt3</strong> by <a href="http://github.com/50L1DU5">Ian Shannon Cohee</a>.</p>
+	      <p class="footer-line">Forked with <strong style="color:red;">&lt3</strong> from <a href="https://github.com/jglovier/resume-template.git">jglovier</a><br/> by <a href="http://github.com/50L1DU5">Ian Shannon Cohee</a></p>
       </footer>
 
     </div>
