--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -10,20 +10,19 @@
       <meta itemprop="address" content="{{ site.resume_contact_address }}"/>
 
       <header class="page-header">
-
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar %}
         <img src="images/avatar.png" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
         {{ page.pdf_url }}
         <!-- Your name is defined in the _config.yml file -->
-        <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
-
-        <!-- Contact buttons don't work in print, configure in the _config.yml file, remove "print-only" to display always. -->
-        <div class="header-contact-info print-only">
-          <p>{{ site.resume_header_contact_info }}</p>
+        <div style="display: flex; justify-content: flex-end">
+          <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
+  `
+            <!-- Contact buttons don't work in print, configure in the _config.yml file, remove "print-only" to display always. -->
+          <p class='header-contact-info print-only'>{{ site.resume_contact_email }} <br>
+               {{ site.resume_contact_telephone }}</p>
         </div>
-
         <div class="title-bar no-print">
 
           <!-- Your title is also defined in the _config.yml file -->
@@ -43,7 +42,6 @@
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
         {% endif %}
-
       </header>
 
       {% if site.resume_section_education %}
