--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -138,7 +138,7 @@
       </section>
       <!-- end Projects -->
       {% endif %}
-      
+
       {% if site.resume_section_recognition %}
       <!-- begin Recognition -->
       <section class="content-section">
@@ -226,5 +226,13 @@
     </div>
 
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131929257-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-131929257-1');
+  </script>
 </html>
