--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -200,7 +200,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Additional Links</h2>
+          <h2>Languages</h2>
         </header>
 
         <div class="resume-item">
