--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -160,7 +160,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Hobbies</h2>
+          <h2>Languages</h2>
         </header>
 
         {% for association in site.data.associations %}
@@ -180,7 +180,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Outside Interests</h2>
+          <h2>Hobbies</h2>
         </header>
 
         <div class="resume-item">
