--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -231,10 +231,11 @@
       <!-- end Print Social Links -->
       {% endif %}
 
-      <!-- <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
-      </footer> -->
+      <footer class="page-footer">
+          <a href="/pdf/Dorian_Dinh_Xuan.pdf" download>Create PDF</a>
+        <!-- <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p> -->
+      </footer>
 
     </div>
 
