--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -233,7 +233,7 @@
 
       <footer class="page-footer">
           
-        <p class="footer-line"><a href="_layouts/pdf/Dorian_Dinh_Xuan.pdf" download>Create PDF</a></p>
+        <p class="footer-line"><a href="/pdf/doriandinhxuan.pdf" download>Create PDF</a></p>
         <!-- <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p> -->
       </footer>
 
