--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -2,47 +2,59 @@
 {% if site.resume_social_links %}
 <ul class="icon-links">
 
-  <!-- GitHub link -->
-  {% if site.resume_social_links.resume_github_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_github_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-github.html %}</a></li>
-  {% endif %}
+    <!-- GitHub link -->
+    {% if site.resume_social_links.resume_github_url %}
+    <li class="icon-link-item">
+        <a class="icon-link" aria-label="Github URL" href="{{ site.resume_social_links.resume_github_url }}" itemprop="sameAs">{% include
+            icons/icon-github.html %}</a>
+    </li>
+    {% endif %}
 
-  <!-- Twitter link -->
-  {% if site.resume_social_links.resume_twitter_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_twitter_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-twitter.html %}</a></li>
-  {% endif %}
-  
-  <!-- Medium link -->
-  {% if site.resume_social_links.resume_medium_url %}
-  <li class="icon-link-item">
-    <a href="{{ site.resume_social_links.resume_medium_url }}" class="icon-link" itemprop="url">{% include icons/icon-medium.html %}</a>
-  </li>
-  {% endif %}
+    <!-- Twitter link -->
+    {% if site.resume_social_links.resume_twitter_url %}
+    <li class="icon-link-item">
+        <a class="icon-link" aria-label="Twitter URL" href="{{ site.resume_social_links.resume_twitter_url }}" itemprop="sameAs">{% include
+            icons/icon-twitter.html %}</a>
+    </li>
+    {% endif %}
 
-  <!-- Dribbble link -->
-  {% if site.resume_social_links.resume_dribbble_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_dribbble_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-dribbble.html %}</a></li>
-  {% endif %}
+    <!-- Medium link -->
+    {% if site.resume_social_links.resume_medium_url %}
+    <li class="icon-link-item">
+        <a class="icon-link" aria-label="Medium URL" href="{{ site.resume_social_links.resume_medium_url }}" itemprop="url">{% include
+            icons/icon-medium.html %}</a>
+    </li>
+    {% endif %}
 
-  <!-- Facebook link -->
-  {% if site.resume_social_links.resume_facebook_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_facebook_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-facebook.html %}</a></li>
-  {% endif %}
+    <!-- Dribbble link -->
+    {% if site.resume_social_links.resume_dribbble_url %}
+    <li class="icon-link-item"><a class="icon-link" aria-label="Dribble URL" href="{{ site.resume_social_links.resume_dribbble_url }}"
+                                  itemprop="sameAs">{% include icons/icon-dribbble.html %}</a></li>
+    {% endif %}
 
-  <!-- LinkedIn link -->
-  {% if site.resume_social_links.resume_linkedin_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_linkedin_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-linkedin.html %}</a></li>
-  {% endif %}
+    <!-- Facebook link -->
+    {% if site.resume_social_links.resume_facebook_url %}
+    <li class="icon-link-item"><a class="icon-link" aria-label="Facebook URL" href="{{ site.resume_social_links.resume_facebook_url }}"
+                                  itemprop="sameAs">{% include icons/icon-facebook.html %}</a></li>
+    {% endif %}
 
-  <!-- Instagram link -->
-  {% if site.resume_social_links.resume_instagram_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_instagram_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-instagram.html %}</a></li>
-  {% endif %}
+    <!-- LinkedIn link -->
+    {% if site.resume_social_links.resume_linkedin_url %}
+    <li class="icon-link-item"><a class="icon-link" aria-label="LinkedIn URL" href="{{ site.resume_social_links.resume_linkedin_url }}"
+                                  itemprop="sameAs">{% include icons/icon-linkedin.html %}</a></li>
+    {% endif %}
 
-  <!-- Website link -->
-  {% if site.resume_social_links.resume_website_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link" itemprop="url">{% include icons/icon-website.html %}</a></li>
-  {% endif %}
+    <!-- Instagram link -->
+    {% if site.resume_social_links.resume_instagram_url %}
+    <li class="icon-link-item"><a class="icon-link"aria-label="Instagram URL"  href="{{ site.resume_social_links.resume_instagram_url }}"
+                                  itemprop="sameAs">{% include icons/icon-instagram.html %}</a></li>
+    {% endif %}
+
+    <!-- Website link -->
+    {% if site.resume_social_links.resume_website_url %}
+    <li class="icon-link-item"><a class="icon-link" aria-label="Website URL" href="{{ site.resume_social_links.resume_website_url }}"
+                                  itemprop="url">{% include icons/icon-website.html %}</a></li>
+    {% endif %}
 
 </ul>
 {% endif %}
