--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -41,6 +41,7 @@
 
         {% if site.resume_looking_for_work == 'yes' %}
         <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
+        <!-- <p class="footer-line"><a href="/pdf/doriandinhxuan.pdf" download>Create PDF</a></p> -->
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
