image for projects added

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -110,6 +110,7 @@
           <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
           <h4 class="resume-item-details" itemprop="description">{{ project.role }}  &bull; {{ project.duration }}</h4>
           <p class="resume-item-copy">{{ project.description }}</p>
+          <img src={{ project.image_path }} alt={{ project.image_name }}  class="image-center no-print" itemprop="image" >
         </div>
         {% endfor %}
 
