--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -155,6 +155,15 @@
     }
   }
 
+  .image-center {
+    height: auto;  
+    width: 100%;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  
   .resume-item-title,
   .resume-item-details,
   .resume-item-copy,
