Added small fix

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -238,7 +238,7 @@
 
       <footer class="page-footer">
 
-        <p class="footer-line"><a href="/pdf/doriandinhxuan.pdf" download>Create PDF</a></p>
+        {% comment %} <p class="footer-line"><a href="/pdf/doriandinhxuan.pdf" download>Create PDF</a></p> {% endcomment %}
         <!-- <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p> -->
       </footer>
 
