Updates to experience and education

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -73,7 +73,7 @@
       <!-- begin Education -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Education</h2>
+          <h2>Education and Certification</h2>
         </header>
 
         {% for education in site.data.education %}
@@ -232,8 +232,10 @@
       {% endif %}
 
       <footer class="page-footer">
+        <!--
         <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
         <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        -->
       </footer>
 
     </div>
