Updates to html format

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -88,7 +88,7 @@
               {% endfor %}
             </ul></h5>
           <h3><ul class="resume-item-list">
-            {% for cert in education.certs %}
+            {% for cert in site.data.education %}
             <li>{{ cert.cert }}</li>
             {% endfor %}
           </ul></h3>
