Updates to education

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -91,7 +91,7 @@
         </div>
 
 
-        <h4><ul class="resume-item-list">
+        <h4><ul class="resume-item-list" style="list-style-type:none;">
           {% for cert in education.certs %}
           <li>{{ cert.cert }}</li>
           {% endfor %}
