--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -90,13 +90,13 @@
           <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
 
-
-        <h4><ul class="resume-item-list" style="list-style-type:none;">
+        <h4><ul class="resume-item-list">
           {% for cert in education.certs %}
           <li>{{ cert.cert }}</li>
           {% endfor %}
         </ul></h4>
         {% endfor %}
+        
       </section>
       <!-- end Education -->
       {% endif %}
