--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -232,7 +232,8 @@
       {% endif %}
 
       <footer class="page-footer">
-       
+        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        
       </footer>
 
     </div>
